--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+*{
+    margin: 0;
+    padding: 0;
+    
+}
+#home{
+    background-image: url(img/images\ 1.jpg);
+
+    background-size: cover;
+    background-position: center;
+    height: 800px;
+}
+
 #header{display: flex;
     align-items: center;
     justify-content: space-between;
@@ -43,19 +56,22 @@ transition: all .3s ease-in-out;
     left: 20px;
 }
 #container{
+  padding-bottom: 60%;
     width: 80%;
-    margin: 0 auto;
+    margin: auto;
+   
+  
+    
+
 }
 
-#hero {
-  
-    padding: 100px 0;
-    text-align: center;
-}
+
 
 #hero h1 {
+    color: #0f0c29;
     font-size: 36px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 #hero p {
@@ -73,11 +89,8 @@ transition: all .3s ease-in-out;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-#bg {
-    background-image: url(img/images\ 1.jpg);
-    background-size: cover;
-    background-position: center;
-}
+
+
 <!--about us --
 /* Styles for the About Us section */
 .about {
@@ -200,13 +213,15 @@ transition: all .3s ease-in-out;
 }
 
 .container {
-    text-align: center; /* Center-align the content */
-    padding: 10px 0; /* Add some padding for spacing */
-    background-color: #f9f9f9; /* Set background color */
-    color: #333; /* Set text color */
-    font-size: 14px; /* Set font size */
-    border-top: 1px solid #ddd; /* Add a top border */
+    background-color: #ffffff;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100vh;
+   
 }
+
 
 .container p {
     margin: 0; /* Remove default margin for paragraph */
@@ -289,25 +304,7 @@ nav {
 
 <!---Login-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.Sign-in{
+body{
     margin: 0;
     padding: 0;
     display: flex;
